- modes "--edm" and "--rdf" now prompt the user if the option "-wrap" is absent in the command-line.
- option "-deform" now interprets real numbers as the value of the deformation. The symbol "%" must be used to specify a deformation in percent, e.g. "-deform x 1.5% 0.0".
- option "-properties" allows to read atom velocities from a file.
- option "-remove-doubles" now only removes selected atoms if a selection is defined.
- option "-remove-properties" does not remove the auxiliary property anymore if a selection is defined, instead the property is set to zero for selected atoms. If no selection is defined the property is still completely removed.
- option "-rotate" now also rotates atom velocity and force vectors if they are defined.
- option "-select" now allows to select the neighbors of an atom. The selection can be on the N nearest neighbors, or neighbors within a radius, or the first nearest neighbors. This option also allows to select a given percentage of the atoms, or a percentage of atoms of a given species.
- option "-unit" allows to convert atom velocities.
- option "-wrap" now only wraps selected atoms if a selection is defined.
- the positions of shells (in the sense of an ionic core-shell potential) are now written in LAMMPS data files.
- when reading LAMMPS custom file (*.lmc), the atom "type" is not required anymore. Furthermore if the "element" appears it is read.
- support for longer filenames (up to 4096 characters).
- fixed a bug where some file formats would not be detected correctly if the file name was given through a path.
- fixed a bug where atom electric charges would not be read from LAMMPS data files (*.lmp).
- fixed a bug where the compliance tensor would not be properly inverted to give the stiffness tensor in option "-properties".
- when no comment exists, the auto-generated comment that appears in the output file now contains the user name, and the date is now written with the ISO format (yyyy-mm-dd).




beta 0.7.6 (28 March 2014)