@@ -13,7 +13,7 @@
 
 <p><strong><em>Atom</em>/<em>M</em>olecule/<em>M</em>aterial <em>S</em>oftware <em>K</em>it</strong></p>
 
-<p>&copy; P. Hirel 2010 - Version Beta 0.8-2014.07.16</p>
+<p>&copy; P. Hirel 2010 - Version Beta 0.8-2014.07.18</p>
 
 
 
